[package]
default-run = "tutor-service"
edition = "2021"
name = "tutor-nodb"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.2.1"
chrono = {version = "0.4.11", features = ["serde"]}
serde = {version = "1.0.110", features = ["derive"]}

[[bin]]
name = "basic-server"

[[bin]]
name = "tutor-service"
